--- a/matrix.html
+++ b/matrix.html
@@ -2,41 +2,26 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Matrix Calculator - MathWiz</title>
-
     <link rel="stylesheet" href="styles.css">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
 </head>
 
 <body>
 
     <div class="container">
-
         <nav class="nav-menu">
-
             <a href="index.html" class="nav-link">Home</a>
-
             <a href="trig.html" class="nav-link">Trigonometry</a>
-
             <a href="matrix.html" class="nav-link active">Matrix</a>
-
             <a href="financial.html" class="nav-link">Financial</a>
-
             <a href="unit.html" class="nav-link">Unit Converter</a>
-
+            <a href="statistics.html" class="nav-link">Statistics</a>
         </nav>
 
-
-
         <main>
-
             <section class="calculator-section">
 
                 <h2>Matrix Calculator</h2>
