--- a/trig.html
+++ b/trig.html
@@ -15,6 +15,7 @@
             <a href="matrix.html" class="nav-link">Matrix</a>
             <a href="financial.html" class="nav-link">Financial</a>
             <a href="unit.html" class="nav-link">Unit Converter</a>
+            <a href="statistics.html" class="nav-link">Statistics</a>
         </nav>
 
         <main>
