--- a/matrix.html
+++ b/matrix.html
@@ -7,18 +7,23 @@
     <title>Matrix Calculator - MathWiz</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="js/nav.js" defer></script>
 </head>
 
 <body>
-
     <div class="container">
         <nav class="nav-menu">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="trig.html" class="nav-link">Trigonometry</a>
-            <a href="matrix.html" class="nav-link active">Matrix</a>
-            <a href="financial.html" class="nav-link">Financial</a>
-            <a href="unit.html" class="nav-link">Unit Converter</a>
-            <a href="statistics.html" class="nav-link">Statistics</a>
+            <button class="menu-toggle" aria-label="Toggle navigation menu">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="nav-links">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="trig.html" class="nav-link">Trigonometry</a>
+                <a href="matrix.html" class="nav-link active">Matrix</a>
+                <a href="financial.html" class="nav-link">Financial</a>
+                <a href="unit.html" class="nav-link">Unit Converter</a>
+                <a href="statistics.html" class="nav-link">Statistics</a>
+            </div>
         </nav>
 
         <main>
@@ -31,158 +36,87 @@
                     <div class="matrix-calculator card">
 
                         <!-- Matrix Operation Selection -->
-
                         <div class="matrix-operations">
-
                             <button class="btn operation-btn active" data-operation="add">
-
                                 <i class="fas fa-plus"></i> Addition
-
                             </button>
 
                             <button class="btn operation-btn" data-operation="subtract">
-
                                 <i class="fas fa-minus"></i> Subtraction
-
                             </button>
 
                             <button class="btn operation-btn" data-operation="multiply">
-
                                 <i class="fas fa-times"></i> Multiplication
-
                             </button>
 
                             <button class="btn operation-btn" data-operation="determinant">
-
                                 <i class="fas fa-calculator"></i> Determinant
-
                             </button>
 
                             <button class="btn operation-btn" data-operation="inverse">
-
                                 <i class="fas fa-sync-alt"></i> Inverse
-
                             </button>
 
                             <button class="btn operation-btn" data-operation="transpose">
-
                                 <i class="fas fa-exchange-alt"></i> Transpose
-
                             </button>
-
                         </div>
 
-
-
                         <!-- Matrix Size Controls -->
-
                         <div class="matrix-size-controls">
-
                             <div class="matrix-a-size">
-
                                 <label>Matrix A Size:</label>
-
                                 <div class="size-inputs">
-
                                     <input type="number" id="matrix-a-rows" min="1" max="5" value="2" placeholder="Rows">
-
                                     <span>×</span>
-
                                     <input type="number" id="matrix-a-cols" min="1" max="5" value="2" placeholder="Columns">
-
                                 </div>
-
                             </div>
 
                             <div class="matrix-b-size">
-
                                 <label>Matrix B Size:</label>
-
                                 <div class="size-inputs">
-
                                     <input type="number" id="matrix-b-rows" min="1" max="5" value="2" placeholder="Rows">
-
                                     <span>×</span>
-
                                     <input type="number" id="matrix-b-cols" min="1" max="5" value="2" placeholder="Columns">
-
-                                </div>
-
+                                  </div>
                             </div>
-
                         </div>
-
-
 
                         <!-- Matrix Input Section -->
-
                         <div class="matrix-input-section">
-
                             <div class="matrix-input matrix-a">
-
                                 <h3>Matrix A</h3>
-
                                 <div class="matrix-grid" id="matrix-a-grid"></div>
-
                             </div>
-
                             <div class="operation-symbol">+</div>
-
                             <div class="matrix-input matrix-b">
-
                                 <h3>Matrix B</h3>
-
                                 <div class="matrix-grid" id="matrix-b-grid"></div>
-
                             </div>
-
                         </div>
-
-
 
                         <!-- Calculate Button -->
-
                         <button class="btn calculate-btn" id="calculate-matrix">
-
                             <i class="fas fa-equals"></i> Calculate
-
                         </button>
 
-
-
                         <!-- Result Section -->
-
                         <div class="matrix-result">
-
                             <h3>Result</h3>
-
                             <div class="matrix-grid" id="result-grid"></div>
-
                         </div>
-
                     </div>
-
                 </div>
-
             </section>
-
         </main>
 
-
-
         <footer>
-
             <p>&copy; 2024 MathWiz Calculator. All rights reserved.</p>
-
         </footer>
-
     </div>
-
-
 
     <script src="js/matrix.js"></script>
 
 </body>
-
 </html>
-
