--- a/statistics.html
+++ b/statistics.html
@@ -6,16 +6,22 @@
     <title>MathWiz - Statistics Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="js/nav.js" defer></script>
 </head>
 <body>
     <div class="container">
         <nav class="nav-menu">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="trig.html" class="nav-link">Trigonometry</a>
-            <a href="matrix.html" class="nav-link">Matrix</a>
-            <a href="financial.html" class="nav-link">Financial</a>
-            <a href="unit.html" class="nav-link">Unit Converter</a>
-            <a href="statistics.html" class="nav-link active">Statistics</a>
+            <button class="menu-toggle" aria-label="Toggle navigation menu">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="nav-links">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="trig.html" class="nav-link">Trigonometry</a>
+                <a href="matrix.html" class="nav-link">Matrix</a>
+                <a href="financial.html" class="nav-link">Financial</a>
+                <a href="unit.html" class="nav-link">Unit Converter</a>
+                <a href="statistics.html" class="nav-link active">Statistics</a>
+            </div>
         </nav>
 
         <main>
