--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
                                 <li>Real-time conversion</li>
                             </ul>
                         </a>
+                        <a href="statistics.html" class="calc-card">
+                            <i class="fas fa-chart-bar"></i>
+                            <h3>Statistics Calculator</h3>
+                            <p>Analyze and compute statistical measures</p>
+                            <ul>
+                                <li>Mean, Median, Mode</li>
+                                <li>Standard Deviation</li>
+                                <li>Variance Analysis</li>
+                                <li>Data Distribution</li>
+                            </ul>
+                        </a>
                     </div>
                 </div>
             </section>
