formula ref, trig ratio input, stat update

--- a/financial.html
+++ b/financial.html
@@ -197,6 +197,51 @@
                     </div>
                 </div>
             </section>
+
+            <section class="formula-reference">
+                <h3>Financial Formulas Reference</h3>
+                <div class="formula-grid">
+                    <div class="formula-card">
+                        <h4>Simple Interest</h4>
+                        <div class="formula-item">
+                            <span class="formula-symbol">I = P × r × t</span>
+                            <span class="formula-description">Interest = Principal × Rate × Time</span>
+                        </div>
+                        <div class="formula-item">
+                            <span class="formula-symbol">A = P(1 + rt)</span>
+                            <span class="formula-description">Final amount with simple interest</span>
+                        </div>
+                    </div>
+
+                    <div class="formula-card">
+                        <h4>Compound Interest</h4>
+                        <div class="formula-item">
+                            <span class="formula-symbol">A = P(1 + r)ⁿ</span>
+                            <span class="formula-description">Amount after n periods</span>
+                        </div>
+                        <div class="formula-item">
+                            <span class="formula-symbol">A = P(1 + r/m)^(mt)</span>
+                            <span class="formula-description">m times per year compounding</span>
+                        </div>
+                    </div>
+
+                    <div class="formula-card">
+                        <h4>Present Value</h4>
+                        <div class="formula-item">
+                            <span class="formula-symbol">PV = FV/(1 + r)ⁿ</span>
+                            <span class="formula-description">Present value of future amount</span>
+                        </div>
+                    </div>
+
+                    <div class="formula-card">
+                        <h4>Loan Payment</h4>
+                        <div class="formula-item">
+                            <span class="formula-symbol">PMT = P[r(1+r)ⁿ]/[(1+r)ⁿ-1]</span>
+                            <span class="formula-description">Monthly payment for amortized loan</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer>
