--- a/matrix.html
+++ b/matrix.html
@@ -109,6 +109,47 @@
                     </div>
                 </div>
             </section>
+
+            <section class="formula-reference">
+                <h3>Matrix Operations Reference</h3>
+                <div class="formula-grid">
+                    <div class="formula-card">
+                        <h4>Matrix Addition</h4>
+                        <div class="formula-item">
+                            <span class="formula-symbol">[A + B]ᵢⱼ = aᵢⱼ + bᵢⱼ</span>
+                            <span class="formula-description">Add corresponding elements</span>
+                        </div>
+                    </div>
+
+                    <div class="formula-card">
+                        <h4>Matrix Multiplication</h4>
+                        <div class="formula-item">
+                            <span class="formula-symbol">[AB]ᵢⱼ = Σₖ aᵢₖbₖⱼ</span>
+                            <span class="formula-description">Sum of row × column products</span>
+                        </div>
+                        <div class="formula-item">
+                            <span class="formula-symbol">A × B ≠ B × A</span>
+                            <span class="formula-description">Matrix multiplication is not commutative</span>
+                        </div>
+                    </div>
+
+                    <div class="formula-card">
+                        <h4>Determinant (2×2)</h4>
+                        <div class="formula-item">
+                            <span class="formula-symbol">|A| = ad - bc</span>
+                            <span class="formula-description">For matrix [[a,b],[c,d]]</span>
+                        </div>
+                    </div>
+
+                    <div class="formula-card">
+                        <h4>Transpose</h4>
+                        <div class="formula-item">
+                            <span class="formula-symbol">[Aᵀ]ᵢⱼ = [A]ⱼᵢ</span>
+                            <span class="formula-description">Swap rows and columns</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer>
