--- a/statistics.html
+++ b/statistics.html
@@ -30,9 +30,19 @@
                 <div class="calculator-container">
                     <div class="stats-calc calculator-wrapper">
                         <div class="data-input">
-                            <label for="data-values">Enter Numbers (comma or space separated):</label>
-                            <textarea id="data-values" class="calculator-screen" rows="3" placeholder="Example: 1, 2, 3, 4, 5"></textarea>
-                            <button id="calculate-stats" class="btn operator"><i class="fas fa-calculator"></i> Calculate</button>
+                            <label for="data">Enter Data (comma-separated):</label>
+                            <input type="number" id="data" step="any" placeholder="Enter numbers one at a time" onkeydown="if(event.key === ',' || event.key === 'Enter') addNumber(event)">
+                            <div id="numbers-list" class="numbers-list"></div>
+                            <div class="action-buttons">
+                                <div class="clear-buttons">
+                                    <button onclick="clearNumbers()" class="clear-btn">Clear All</button>
+                                    <button onclick="clearLastNumber()" class="clear-btn">Clear Last</button>
+                                </div>
+                                <div class="sort-buttons">
+                                    <button onclick="sortNumbers('asc')" class="sort-btn"><i class="fas fa-sort-amount-up"></i> Sort Ascending</button>
+                                    <button onclick="sortNumbers('desc')" class="sort-btn"><i class="fas fa-sort-amount-down"></i> Sort Descending</button>
+                                </div>
+                            </div>
                         </div>
                         
                         <div class="stats-results">
@@ -66,13 +76,56 @@
                                     <label>Range</label>
                                     <input type="text" id="range-result" readonly>
                                 </div>
+                                <div class="result-box">
+                                    <label>Variance</label>
+                                    <input type="text" id="variance-result" readonly>
+                                </div>
+                                <div class="result-box">
+                                    <label>Standard Deviation</label>
+                                    <input type="text" id="stddev-result" readonly>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
 
-                        <div class="quick-actions">
-                            <button class="btn operator" id="sort-asc"><i class="fas fa-sort-amount-up"></i> Sort Ascending</button>
-                            <button class="btn operator" id="sort-desc"><i class="fas fa-sort-amount-down"></i> Sort Descending</button>
-                            <button class="btn operator" id="clear-data"><i class="fas fa-eraser"></i> Clear</button>
+            <section class="formula-reference">
+                <h3>Statistical Formulas Reference</h3>
+                <div class="formula-grid">
+                    <div class="formula-card">
+                        <h4>Central Tendency</h4>
+                        <div class="formula-item">
+                            <span class="formula-symbol">x̄ = (Σx)/n</span>
+                            <span class="formula-description">Mean: sum of values divided by count</span>
+                        </div>
+                        <div class="formula-item">
+                            <span class="formula-symbol">x̃</span>
+                            <span class="formula-description">Median: middle value when sorted</span>
+                        </div>
+                    </div>
+
+                    <div class="formula-card">
+                        <h4>Dispersion</h4>
+                        <div class="formula-item">
+                            <span class="formula-symbol">s² = Σ(x - x̄)²/(n-1)</span>
+                            <span class="formula-description">Sample variance</span>
+                        </div>
+                        <div class="formula-item">
+                            <span class="formula-symbol">s = √s²</span>
+                            <span class="formula-description">Standard deviation</span>
+                        </div>
+                    </div>
+
+                    <div class="formula-card">
+                        <h4>Other Measures</h4>
+                        <div class="formula-item">
+                            <span class="formula-symbol">Range = max - min</span>
+                            <span class="formula-description">Difference between largest and smallest values</span>
+                        </div>
+                        <div class="formula-item">
+                            <span class="formula-symbol">IQR = Q₃ - Q₁</span>
+                            <span class="formula-description">Interquartile range</span>
                         </div>
                     </div>
                 </div>
