--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <a href="financial.html" class="nav-link">Financial</a>
                 <a href="unit.html" class="nav-link">Unit Converter</a>
                 <a href="statistics.html" class="nav-link">Statistics</a>
+                <a href="physics.html" class="nav-link">Physics</a>
             </div>
         </nav>
 
@@ -83,6 +84,17 @@
                                 <li>Standard Deviation</li>
                                 <li>Variance Analysis</li>
                                 <li>Data Distribution</li>
+                            </ul>
+                        </a>
+                        <a href="physics.html" class="calc-card">
+                            <i class="fas fa-atom"></i>
+                            <h3>Physics Calculator</h3>
+                            <p>Advanced physics calculations</p>
+                            <ul>
+                                <li>Vector operations</li>
+                                <li>Linear motion</li>
+                                <li>Projectile motion</li>
+                                <li>Real-time calculations</li>
                             </ul>
                         </a>
                     </div>
