--- a/financial.html
+++ b/financial.html
@@ -49,6 +49,7 @@
                 <a href="financial.html" class="nav-link active">Financial</a>
                 <a href="unit.html" class="nav-link">Unit Converter</a>
                 <a href="statistics.html" class="nav-link">Statistics</a>
+                <a href="physics.html" class="nav-link">Physics</a>
             </div>
         </nav>
 
