--- a/statistics.html
+++ b/statistics.html
@@ -21,6 +21,7 @@
                 <a href="financial.html" class="nav-link">Financial</a>
                 <a href="unit.html" class="nav-link">Unit Converter</a>
                 <a href="statistics.html" class="nav-link active">Statistics</a>
+                <a href="physics.html" class="nav-link">Physics</a>
             </div>
         </nav>
 
