--- a/unit.html
+++ b/unit.html
@@ -21,6 +21,7 @@
                 <a href="financial.html" class="nav-link">Financial</a>
                 <a href="unit.html" class="nav-link active">Unit Converter</a>
                 <a href="statistics.html" class="nav-link">Statistics</a>
+                <a href="physics.html" class="nav-link">Physics</a>
             </div>
         </nav>
 
